# prime_benny_ha

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  Untitled6.ipynb  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
source/: modules.rst
src/prime_bh2896/: __init__.py  prime_bh2896.py
tests/: test_prime_bh2896.py
